fix navbar visibility

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins');
+@import url('https://fonts.googleapis.com/css?family=Manrope');
 
 * {
-    font-family: 'Poppins', 'Arial';
+    font-family: 'Manrope', 'Arial';
     box-sizing: border-box;
 }
 
